<resources>
    <string name="app_name">LapCounter</string>
    <string name="title_home">Home</string>
    <string name="title_current_workout">Current Workout</string>
    <string name="title_analytics">Analytics</string>
    <string name="title_past_workouts">History</string>
    <string name="title_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="saveButtonLabel">Save</string>
    <string name="restartButtonLabel">Restart</string>
    <string name="select_device">Select Device</string>
    <string name="i_device_name">DEVICE_NAME</string>
    <string name="i_device_mac">DEVICE_MAC</string>
    <string name="i_device_rssi">DEVICE_RSSI</string>
    <string name="label_calibrate_instructions">Press \"Calibrate\". Swim out to the flags, pause for a moment, then swim back and press \"Done\"</string>
    <string name="label_calibrate">Calibrate</string>
    <string name="label_no_device_selected">No device selected.</string>
    <string name="label_connecting">Connecting to %1$s</string>
    <string name="label_connected">Connected to %1$s.</string>
    <string name="label_device_disconnected_try_reconnect">Device disconnected. Trying to reconnect.</string>
    <string name="label_collecting_rssi_values">Collecting RSSI values.</string>
    <string name="label_stop">Stop</string>
    <string name="label_done">Done</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="resumeButtonLabel">Resume</string>
    <string name="pool_size_title">"Pool Size"</string>
    <string name="meters">Meters</string>
    <string name="yards">"Yards"</string>
    <string name="num_25">"25"</string>
    <string name="num_50">"50"</string>
    <string name="num_35">"35"</string>
    <string name="custom">"Custom"</string>
    <string name="units">"Units</string>
    <string name="size">"Size"</string>
    <string name="request_location_rationale">Scanning for devices requires location permission.</string>
    <string name="pool_length">"Pool Length"</string>
    <string name="workout_duration">"Workout Duration"</string>
    <string name="avg_lap_time">"Avg Lap Time"</string>
    <string name="average_speed">"Average Speed"</string>
    <string name="laps">"Laps"</string>
    <string name="total_distance">"Total Distance"</string>
    <string name="save">"Save"</string>
    <string name="current_workout_timer_format">%d:%02d:%03d</string>
    <string name="ConfirmRestart">Are you sure you want to restart your workout?</string>
    <string name="label_delete_device">Delete Device</string>
    <string name="save_workout_successful">Saved Workout Successfully!</string>
    <string-array name="measurement_array">
        <item>Yards</item>
        <item>Meters</item>
    </string-array>

    <string-array name="graphTypes">
        <item>Distance Traveled</item>
        <item>Average Speed</item>
        <item>Workout Duration</item>
    </string-array>


    <string name="label_select_dates">Select Dates:</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="label_to">to</string>
    <string name="label_total_distance">Total Distance:</string>
    <string name="label_avg_workout_time">Avg Workout Time:</string>
    <string name="label_duration">Duration:</string>
    <string name="label_avg_workout_dist">Avg Workout Dist:</string>
    <string name="label_no_data">No Data</string>
    <string name="no_data">No Data</string>
    <string name="label_past_workout_distances">PAST WORKOUT DISTANCES</string>
    <string name="label_txt_lap_count">txt_lap_count</string>
    <string name="label_date_name">Date_name</string>
    <string name ="label_Paskworkouts_date">Date</string>
    <string name ="label_Paskworkouts_laps">Laps</string>

    <string name="device_name">Device Name</string>
    <string name="device_mac">Device MAC</string>

</resources>
